# linux-application-development-2022

01_GitBuildReq/: main.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  fun.c
04_Text/: randomizer.sh
05_Debugging/: Makefile  range.c  script1.gdb  script2.gdb  script2_answer
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  move.c  myUnlink.c  tests.sh
08_Environmental/: Makefile.am  configure.ac  rhasher.c
09_I18n/: CMakeLists.txt  main.c
09_I18n/po/: ru.po
11_Testing/: configure.ac
11_Testing/src/: Makefile.am
11_Testing/tests/: unitTests.c
12_Documenting/: CMakeLists.txt  Doxyfile.in  main.c  main.pot
12_Documenting/po/: ru.po
